# backend-api-jwt

./: .env  .env.example  .gitignore  Cargo.toml  PULL_REQUEST.md  README.md
.github/: FUNDING.yml
.github/workflows/: integration-tests.yml
migrations/: 20260122100826_create_users_table.sql  20260123121000_add_unique_index_on_users_email.sql
src/: app.rs  config.rs  lib.rs  main.rs  test_helpers.rs
src/config/: database.rs
src/handlers/: health_handler.rs  login_handler.rs  mod.rs  register_handler.rs  user_handler.rs
src/middlewares/: auth_middleware.rs  mod.rs  proxy.rs  rate_limiter.rs
src/models/: user.rs
src/routes/: auth_routes.rs  user_routes.rs
src/schemas/: login_schema.rs  mod.rs  register_schema.rs  user_schema.rs
src/utils/: auth.rs  handler.rs  jwt.rs  mod.rs  response.rs  validation.rs
tests/: app_router.rs  cleanup_rate_limiter.rs  debug_rate_limiter.rs  integration_cors.rs  integration_healthcheck.rs  integration_login.rs  integration_proxy_middleware.rs  integration_register.rs  integration_user_delete.rs  integration_user_list.rs  integration_user_store.rs  integration_user_update.rs  integration_users_pagination.rs  proxy_middleware.rs  rate_limiter.rs  rate_limiter_auth.rs  rate_limiter_cost.rs  rate_limiter_drop.rs  rate_limiter_sources.rs
tests/k6/: README.md  login.js  users.js
